# pulan_project

./: README.md  圆形底盘上下位机通信协议.xls
auto_container_manager/: README.md
autoware/autoware学习/: autoware学习.md
autoware/autoware学习/0.矢量地图的绘制/: autoware矢量地图标注.md
autoware/autoware学习/6.决策规划模块/: 6.3 lane_planer模块源码解析.md  6.4 astar规划模块源码解析.md  6.6 velocity_set规划模块源码解析.md  Readme.md
autoware/autoware学习/6.决策规划模块/op_planner模块/: 2.lane_rule模块.md
autoware/autoware学习/7.运动控制模块/: MPC模块.md  pure_pursuit模块.md  控制指标.md  无人驾驶.md  车辆控制需求.xlsx
autoware/autoware安装/autoware1.13安装与使用/: 1.ROS安装.md  2.autoware docker安装(NVIDIA AGX).md  2.autoware docker安装.md  2.autoware安装 - melodic.md  2.autoware安装 - noetic.md  3.autoware demo使用.md  build.sh
chassis_driver/: CMakeLists.txt  package.xml  wheeltec_udev.sh
chassis_driver/include/: wheeltec_robot.h
chassis_driver/launch/: cmapping.launch  cnavigation.launch  mapping.launch  navigation.launch  turn_on_wheeltec_robot.launch
chassis_driver/launch/include/: amcl.launch  base_serial.launch  dwa_local_planner.launch  rtabmap_nav.launch
chassis_driver/map/: 0727.pgm  0727.yaml  0808.pgm  0808.yaml  mymap.pbstream
chassis_driver/param_common/: dwa_local_planner_params.yaml  front_laser_config.yaml  global_costmap_params.yaml  local_costmap_params.yaml  wheeltec_smoother.yaml
chassis_driver/param_mini_4wd/: costmap_common_params.yaml
chassis_driver/rviz/: create_map.rviz
chassis_driver/src/: test_chassis_node.cpp  wheeltec_robot.cpp
lingyou_project/LDS_robot/: .gitignore  README.md  build.sh
lingyou_project/LDS_robot/src/LDS_model/launch/: display.launch  gazebo.launch
lingyou_project/LDS_robot/src/LDS_model/meshes/: Camera_link.STL  Lidar_link.STL  bright_link.STL  fright_link.STL
lingyou_project/LDS_robot/src/LDS_model/urdf/: yuanpan11.csv
lingyou_project/LDS_robot/src/gazebo_sim/launch/: startup_robot_gazebo.launch
lingyou_project/LDS_robot/src/gazebo_sim/xacro/: base.xacro  camera_config.xacro  control_move.xacro  laser.xacro  lidar_config.xacro  robot.xacro
lingyou_project/LDS_robot/src/localization/launch/: amcl.launch
lingyou_project/LDS_robot/src/move_robot_sim/: CMakeLists.txt
lingyou_project/LDS_robot/src/move_robot_sim/laucnh/: move_robot_sim.launch
lingyou_project/LDS_robot/src/navigation/: CMakeLists.txt
lingyou_project/LDS_robot/src/navigation/launch/: path.launch
lingyou_project/LDS_robot/src/navigation/maps/: nav.pgm  nav.yaml
lingyou_project/LDS_robot/src/navigation/param/: global_costmap_params.yaml  local_costmap_params.yaml
lingyou_project/LDS_robot/src/robot_description/: README
lingyou_project/LDS_robot/src/robot_description/config/: test.rviz
lingyou_project/LDS_robot/src/robot_description/launch/: start_robot.launch
lingyou_project/LDS_robot/src/robot_description/urdf/: robot.urdf
lingyou_project/LDS_robot/src/robot_description/xacro/: camera.xacro  robot.xacro
pulan_project/: README.md
pulan_project/LDS_robot/src/LDS_model/: CMakeLists.txt  package.xml
pulan_project/LDS_robot/src/LDS_model/config/: joint_names_yuanpan11.yaml
pulan_project/LDS_robot/src/gazebo_sim/: CMakeLists.txt  package.xml
pulan_project/LDS_robot/src/localization/: package.xml
pulan_project/LDS_robot/src/move_robot_sim/: package.xml
pulan_project/LDS_robot/src/navigation/: package.xml
pulan_project/LDS_robot/src/navigation/launch/: navigation.launch
pulan_project/LDS_robot/src/navigation/param/: base_local_planner_params.yaml
pulan_project/LDS_robot/src/navigation/rviz/: navigation.rviz
pulan_project/LDS_robot/src/robot_description/: package.xml
pulan_project/LDS_robot/src/slam/: CMakeLists.txt  package.xml
pulan_teaching_nav_ws/: README.md  build.sh
pulan_teaching_nav_ws/params/params/Sim_Arbotix/: base_local_planner_params.yaml  costmap_common_params.yaml  global_planner_params.yaml  local_costmap_params.yaml
pulan_teaching_nav_ws/params/params/pulan_circular_robot/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  local_costmap_params_double_camera.yaml
pulan_teaching_nav_ws/src/navigation/costmap_2d/: CMakeLists.txt
pulan_teaching_nav_ws/src/navigation/dwa_local_planner/: CMakeLists.txt
pulan_teaching_nav_ws/src/navigation/move_base/: CMakeLists.txt  package.xml
pulan_teaching_nav_ws/src/navigation/su_local_planner/mpc/: CMakeLists.txt  package.xml
pulan_teaching_nav_ws/src/navigation/su_local_planner/mpc/launch/params/mpc/: mpc_local_params.yaml  mpc_params.yaml
pulan_teaching_nav_ws/src/navigation/su_local_planner/mpc/src/: MPC_Node.cpp  trackRefTrajNode(复件).cpp  trackRefTrajNode.cpp
pulan_teaching_nav_ws/src/navigation/su_local_planner/mpc_bezier/: CMakeLists.txt  package.xml
pulan_teaching_nav_ws/src/navigation/su_local_planner/mpc_bezier/include/: bezier_curve.h  polynomial_curve.h
pulan_teaching_nav_ws/src/navigation/su_local_planner/mpc_bezier/src/: bezier_curve.cpp  polynomial_curve.cpp  trackRefTrajNode.cpp
pulan_teaching_nav_ws/src/navigation/su_local_planner/pid/: CMakeLists.txt  package.xml
pulan_teaching_nav_ws/src/navigation/su_local_planner/pid/include/: local_planner.h  pid_planner.h
pulan_teaching_nav_ws/src/navigation/su_local_planner/pid/launch/: pid.launch
pulan_teaching_nav_ws/src/navigation/su_local_planner/pid/params/config/: pid_planner_params.yaml
pulan_teaching_nav_ws/src/navigation/su_local_planner/pid/src/: local_planner.cpp  pid_planner.cpp
pulan_teaching_nav_ws/src/navigation/velocity_smoother/: CMakeLists.txt  package.xml
pulan_teaching_nav_ws/src/navigation/velocity_smoother/cfg/: VelocitySmooth.cfg
pulan_teaching_nav_ws/src/navigation/velocity_smoother/include/velocity_smoother/: state_control.h  velocity_smoother.hpp
pulan_teaching_nav_ws/src/navigation/velocity_smoother/launch/: velocity_smoother.launch  velocity_smoother_big200w.launch
pulan_teaching_nav_ws/src/navigation/velocity_smoother/src/: state_control.cpp  velocity_smoother.cpp
pulan_teaching_nav_ws/src/navigation/yocs_velocity_smoother/: CMakeLists.txt
(+121 files in other folders)
